# the-mind

./: Cargo.toml
src/: lib.rs  main.rs  net.rs  player_space.rs  server.rs
src/net/: client.rs  messages.rs  mod.rs  server.rs
src/net/encde/: mod.rs  server.rs
