[package]
name = "the-mind"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.86"
log = "0.4.21"
pqc_kyber = { version =  "0.7.1", features = ["std"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
simple_logger = "5.0.0"
tokio = { version = "1.37.0", features = ["full"] }
